--- a/TravelApp/Map.storyboard
+++ b/TravelApp/Map.storyboard
@@ -174,6 +174,9 @@
                     <nil key="simulatedBottomBarMetrics"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="260" height="110"/>
+                    <connections>
+                        <outlet property="mapType" destination="bZ9-hw-q6I" id="TTH-Mk-Frw"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i9h-Il-AsP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
