Connected map view/slide up view to swipe view
If a user selects an item in the popular places table from the slide up view, the user is segued to the swipe view. The swipe view is populated by the popular places list. The first view of all views in the swipe controller is the view of the place that was selected. A lot of UI changes still need to be done.

For some reason the pictures won't load???

--- a/TravelApp/CardSwipe.storyboard
+++ b/TravelApp/CardSwipe.storyboard
@@ -12,8 +12,8 @@
         <!--Navigation Controller-->
         <scene sceneID="1Cd-Zc-0R8">
             <objects>
-                <navigationController id="S4H-lP-3oX" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="Ryr-UT-Kau">
+                <navigationController storyboardIdentifier="SwipeNavigationView" id="S4H-lP-3oX" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Ryr-UT-Kau">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
