--- a/TravelApp/Welcome.storyboard
+++ b/TravelApp/Welcome.storyboard
@@ -81,6 +81,10 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="tagView" translatesAutoresizingMaskIntoConstraints="NO" id="55L-xl-Dot">
+                                <rect key="frame" x="16" y="57" width="343" height="348"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.2222103476524353" green="0.4999840259552002" blue="0.69359928369522095" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
@@ -116,13 +120,17 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="cartView-1" translatesAutoresizingMaskIntoConstraints="NO" id="aWw-gX-7N0">
+                                <rect key="frame" x="16" y="58" width="343" height="348"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.20652821660041809" green="0.58287811279296875" blue="0.65216249227523804" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="g8Y-SX-tHh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1794" y="645"/>
+            <point key="canvasLocation" x="1792.8" y="644.52773613193403"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="ceO-UQ-oHg">
@@ -151,13 +159,17 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="swipeView" translatesAutoresizingMaskIntoConstraints="NO" id="D5W-ak-e84">
+                                <rect key="frame" x="16" y="57" width="343" height="348"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.2282976508140564" green="0.25891217589378357" blue="0.69601178169250488" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jVH-lG-43d" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2454" y="645"/>
+            <point key="canvasLocation" x="2453.5999999999999" y="644.52773613193403"/>
         </scene>
         <!--Delegate-->
         <scene sceneID="xNr-Jx-wrD">
@@ -168,7 +180,7 @@
                         <viewControllerLayoutGuide type="bottom" id="hw3-C3-3sg"/>
                     </layoutGuides>
                     <view key="view" opaque="NO" contentMode="scaleToFill" id="VKJ-EY-skd">
-                        <rect key="frame" x="0.0" y="0.0" width="343" height="166"/>
+                        <rect key="frame" x="0.0" y="0.0" width="343" height="173"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gQe-XW-DEo">
@@ -184,7 +196,7 @@
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cQM-sB-X51" customClass="FBSDKLoginButton">
                                 <rect key="frame" x="16" y="20" width="311" height="71"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="delegate" destination="GlE-Zw-x5h" id="rIg-lm-AWu"/>
                                 </connections>
@@ -204,8 +216,53 @@
             </objects>
             <point key="canvasLocation" x="1987" y="1371"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="nPv-m6-ZTT">
+            <objects>
+                <viewController storyboardIdentifier="Page5ViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="y5X-bH-c8R" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="8lO-pU-Yia"/>
+                        <viewControllerLayoutGuide type="bottom" id="Xhi-gP-Ws7"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="J97-6D-Fw0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Yzd-d4-mWR">
+                                <rect key="frame" x="16" y="486" width="343" height="173"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <segue destination="GlE-Zw-x5h" kind="embed" id="TFC-zN-Sp6"/>
+                                </connections>
+                            </containerView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="mapView" translatesAutoresizingMaskIntoConstraints="NO" id="pSS-Zs-FkZ">
+                                <rect key="frame" x="16" y="57" width="343" height="348"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Do it all on a Map" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="otf-x3-NIr">
+                                <rect key="frame" x="124" y="27" width="296" height="22"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.25098040700000002" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SZq-pr-pEE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3130" y="645"/>
+        </scene>
     </scenes>
+    <resources>
+        <image name="cartView-1" width="550" height="689"/>
+        <image name="mapView" width="552" height="984"/>
+        <image name="swipeView" width="559" height="963"/>
+        <image name="tagView" width="562" height="876"/>
+    </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="fw6-3d-2LO"/>
+        <segue reference="Ier-qQ-4Jl"/>
     </inferredMetricsTieBreakers>
 </document>
