--- a/TravelApp/SlideUpView/PopularTableViewCell.xib
+++ b/TravelApp/SlideUpView/PopularTableViewCell.xib
@@ -27,7 +27,7 @@
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yqe-6i-hHv" customClass="CosmosView" customModule="Cosmos">
-                        <rect key="frame" x="219" y="45.5" width="93" height="20"/>
+                        <rect key="frame" x="219" y="14" width="93" height="20"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="93" id="1Io-8l-zqo"/>
@@ -50,30 +50,33 @@
                         </userDefinedRuntimeAttributes>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vht-EU-E5W">
-                        <rect key="frame" x="76" y="14" width="236" height="13.5"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                        <rect key="frame" x="76" y="14" width="135" height="27"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="249" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CTj-DH-iUD">
-                        <rect key="frame" x="87" y="44" width="124" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                        <rect key="frame" x="76" y="44" width="135" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="Hru-Ds-jwG"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="9"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="CTj-DH-iUD" firstAttribute="leading" secondItem="22A-Le-Ulw" secondAttribute="trailing" constant="19" id="Dwg-fi-Ly9"/>
+                    <constraint firstItem="CTj-DH-iUD" firstAttribute="top" secondItem="vht-EU-E5W" secondAttribute="bottom" constant="3" id="E8i-lG-gGN"/>
                     <constraint firstAttribute="leadingMargin" secondItem="22A-Le-Ulw" secondAttribute="leading" id="I5U-HY-dpT"/>
                     <constraint firstItem="vht-EU-E5W" firstAttribute="leading" secondItem="22A-Le-Ulw" secondAttribute="trailing" constant="8" id="MVW-sH-7k1"/>
-                    <constraint firstItem="CTj-DH-iUD" firstAttribute="top" secondItem="vht-EU-E5W" secondAttribute="bottom" constant="16.5" id="OJf-TF-KKe"/>
-                    <constraint firstItem="Yqe-6i-hHv" firstAttribute="leading" secondItem="CTj-DH-iUD" secondAttribute="trailing" constant="8" id="Tbb-dt-ddI"/>
                     <constraint firstAttribute="bottomMargin" secondItem="22A-Le-Ulw" secondAttribute="bottom" constant="-0.5" id="VXp-Ss-9xF"/>
                     <constraint firstItem="vht-EU-E5W" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="6" id="cNG-mB-Igx"/>
+                    <constraint firstItem="CTj-DH-iUD" firstAttribute="leading" secondItem="22A-Le-Ulw" secondAttribute="trailing" constant="8" id="eQL-25-bcA"/>
+                    <constraint firstItem="CTj-DH-iUD" firstAttribute="top" secondItem="Yqe-6i-hHv" secondAttribute="bottom" constant="10" id="ggK-IE-qKz"/>
                     <constraint firstAttribute="bottomMargin" secondItem="CTj-DH-iUD" secondAttribute="bottom" constant="1.5" id="mXl-mB-wHz"/>
+                    <constraint firstItem="Yqe-6i-hHv" firstAttribute="leading" secondItem="CTj-DH-iUD" secondAttribute="trailing" constant="8" id="oFA-9a-AQp"/>
                     <constraint firstAttribute="trailingMargin" secondItem="Yqe-6i-hHv" secondAttribute="trailing" id="uHa-NZ-AS2"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="vht-EU-E5W" secondAttribute="trailing" id="ycW-Tk-ic9"/>
-                    <constraint firstItem="Yqe-6i-hHv" firstAttribute="top" secondItem="vht-EU-E5W" secondAttribute="bottom" constant="18" id="zTS-Sk-SGp"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="vht-EU-E5W" secondAttribute="trailing" constant="101" id="ycW-Tk-ic9"/>
                 </constraints>
             </tableViewCellContentView>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -81,7 +84,7 @@
                 <outlet property="starLabel" destination="Yqe-6i-hHv" id="nku-aq-w1D"/>
                 <outlet property="thumbnailImageView" destination="22A-Le-Ulw" id="6tI-id-uF6"/>
                 <outlet property="titleLabel" destination="vht-EU-E5W" id="P6l-NE-IVo"/>
-                <outlet property="vicinityLabel" destination="CTj-DH-iUD" id="alN-lg-imo"/>
+                <outlet property="typeLabel" destination="CTj-DH-iUD" id="6Tx-EM-Exy"/>
             </connections>
             <point key="canvasLocation" x="-80" y="30.5"/>
         </tableViewCell>
